<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>net.ptidej</groupId>
		<artifactId>all-ptidej</artifactId>
		<version>1.0.0</version>
	</parent>

	<groupId>net.ptidej.padl</groupId>
	<artifactId>padl-creator-javafile-javac-parser</artifactId>
	<name>PADL Creator JavaFile (JavaC) Parser</name>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release combine.self="override" />
					<source>25</source>
					<target>25</target>
					<compilerArgs>
						<arg>-proc:none</arg>
						<arg>
							--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
						<arg>
							--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>
							--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>
							--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
						<arg>
							--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.3</version>
				<configuration>
					<argLine>
						--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
						--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
						--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
						--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
						--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
					</argLine>
					<excludes>
						<!-- Excluded on purpose -->
						<exclude>**/TestCreatorJavaFileUsingJavaCParser.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<!-- Must generate the test-jar for dependent tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- Main dependencies -->
		<dependency>
			<groupId>net.ptidej.cpl</groupId>
			<artifactId>cpl-core</artifactId>
			<version>1.0.0</version>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>net.ptidej.padl</groupId>
			<artifactId>padl-core</artifactId>
			<version>1.0.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>